--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
-<body>
-  <app-root></app-root>
+<body >
+  <div id="fondo">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
